--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -79,13 +79,41 @@ assert(!(moo === loo));
   Create an empty slot (which actually means it is bound to
   \lstinline|void|) named \var{name}.  Raise an error if \var{name}
   was already defined.
-
 \begin{urbiscript}[firstnumber=last]
-assert(Object.createSlot("foo").isVoid);
-assert(Object.hasSlot("foo"));
+do (Object.new)
+{
+  assert(!hasSlot("foo"));
+  assert(createSlot("foo").isVoid);
+  assert(hasSlot("foo"));
+}|;
 \end{urbiscript}
 
-\item \lstinline|dump|\\
+\item \lstinline|dump(\var{depth})|\\
+  Describe \lstinline|this|: its prototypes and slots.  The argument
+  \var{depth} specifies how recursive the description is: the greater,
+  the more detailed.  See also \lstinline|Object.inspect|.
+\begin{urbiscript}[firstnumber=last]
+do (2) { var this.attr = "foo"; this.attr->prop = "bar" }.dump(0);
+[00075782] *** Float_0x1800c70 {
+[00075782] ***   /* Special slots */
+[00075782] ***   protos = Float
+[00075782] ***   value = 2
+[00075782] ***   /* Slots */
+[00075782] ***   attr = String_0x18480d0 <...>
+[00075782] ***   }
+do (2) { var this.attr = "foo"; this.attr->prop = "bar" }.dump(1);
+[00078918] *** Float_0x1800c70 {
+[00078918] ***   /* Special slots */
+[00078918] ***   protos = Float
+[00078918] ***   value = 2
+[00078918] ***   /* Slots */
+[00078918] ***   attr = String_0x1859f10 {
+[00078918] ***     /* Special slots */
+[00078918] ***     protos = String
+[00078918] ***     /* Slots */
+[00078918] ***     }
+[00078918] ***   }
+\end{urbiscript}
 
 \item \lstinline|each(\var{fun})|\\
   Call \lstinline|each| with the given functional value on
@@ -132,6 +160,21 @@ assert(!Base.hasSlot("derive"));
 \end{urbiscript}
 
 \item \lstinline|id|\\
+
+\item \lstinline|inspect(\var{deep} = false)|\\
+  Describe \lstinline|this|: its prototypes and slots, and there
+  properties.  If \var{deep}, all the slots are described, not only
+  the local slots. See also \lstinline|Object.dump|.
+\begin{urbiscript}[firstnumber=last]
+do (2) { var this.attr = "foo"; this.attr->prop = "bar"}.inspect;
+[00001227] *** Inspecting 2
+[00001227] *** ** Prototypes:
+[00001227] ***   0
+[00001227] *** ** Local Slots:
+[00001228] ***   2.attr : String
+[00001228] ***     Properties:
+[00001228] ***      prop : String = bar
+\end{urbiscript}
 
 \item \lstinline|isA(\var{obj})|\\
   Return true if \lstinline|this| has \var{obj} in his parents, false
@@ -182,6 +225,21 @@ assert(locateSlot("doesNotExist").isNil);
   Return the list of prototypes of \lstinline|this|.
 \begin{urbiscript}[firstnumber=last]
 assert_eq(12.protos, [0]);
+\end{urbiscript}
+
+\item \lstinline|properties(\var{slotName})|\\
+  Return a dictionary of the properties of slot \var{slotName}.
+  Return an empty dictionary if the slot has not property, raise an
+  error if the slot does not exists.
+\begin{urbiscript}[firstnumber=last]
+2;
+[00001228] 2
+2.properties("foo");
+[00238495:error] !!! lookup failed: foo
+do (2) { var foo = "foo" }.properties("foo");
+[00238501] Dictionary {}
+do (2) { var foo = "foo" ; foo->bar = "bar" }.properties("foo");
+[00238502] Dictionary {"bar" => "bar"}
 \end{urbiscript}
 
 \item \lstinline|removeProperty|\\
