urbi: native "empty" and missing const.
	* src/object/dictionary.hh, src/object/dictionary.cc,
	* src/object/list.hh, src/object/list.cc,
	* src/object/string.hh, src/object/string.cc
	(empty): New.
	Add a few missing const.
	* doc/specs/dictionary.tex: Add example for empty.
	* doc/specs/list.tex: Formatting changes.

Object.asBool.

Replaces the former static function is_true.  While at it, implement
"asBool" based on emptiness for Dictionary and List.

	* src/object/dictionary.hh, src/object/dictionary.cc,
	* src/object/list.hh, src/object/list.cc,
	* src/object/string.hh, src/object/string.cc,
	* src/object/float.hh, src/object/float.cc,
	* src/object/object.hh, src/object/object.cc
	(as_bool): New, replaces...
	* src/object/object.hh, src/object/object.cc (is_true): this,
	remove.
	Adjust all callers.
	* doc/specs/dictionary.tex, doc/specs/list.tex,
	* doc/specs/string.tex, doc/specs/float.tex,
	* doc/specs/object.tex: Document asBool

--- a/doc/specs/boolean.tex
+++ b/doc/specs/boolean.tex
@@ -58,6 +58,13 @@ assert_eq(false || 2, 2);
 assert_eq(!true, false);
 assert_eq(!false, true);
 \end{urbiscript}
+
+\item \lstinline|asBool|\\
+  Identity.
+\begin{urbiscript}[firstnumber=last]
+assert_eq(true.asBool,  true);
+assert_eq(false.asBool, false);
+\end{urbiscript}
 \end{itemize}
 
 %%% Local Variables:
