--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -47,6 +47,29 @@ assert_eq(12.allProtos.map(function (t) { t.asString }),
 
 \item \lstinline|as|\\
 
+\item \lstinline|asBool|\\
+  Whether \lstinline|this| is ``true''.  Depends on the type of
+  \lstinline|this|:
+  \begin{itemize}
+  \item \lstinline|false|, \lstinline|nil|\\
+    return \lstinline|false|.
+  \item  \lstinline|void|\\
+    raise an error.
+  \item lstinline|Float|\\
+    Return true iff non null (\refObject{Float}).
+  \item \lstinline|Dictionary|, \lstinline|List|,  \lstinline|String|\\
+    Return \lstinline|true| iff non-empty (\refObject{Dictionary},
+    \refObject{List}, \refObject{String}).
+  \item otherwise\\
+    Return true.
+  \end{itemize}
+\begin{urbiscript}
+assert_eq(Global.asBool, true);
+assert_eq(nil.asBool,    false);
+void.asBool;
+[00000421:error] !!! unexpected void
+\end{urbiscript}
+
 \item \lstinline|bounce|\\
 
 \item \lstinline|bounce_named|\\
