--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -44,6 +44,16 @@ assert_eq(1.acos, 0);
 assert_eq(51.asFloat, 51);
 \end{urbiscript}
 
+\item \lstinline|asBool|\\
+  Whether non null.
+\begin{urbiscript}[firstnumber=last]
+assert_eq(0.asBool, false);
+assert_eq(0.1.asBool, true);
+assert_eq((-0.1).asBool, true);
+assert_eq(inf.asBool, true);
+assert_eq(nan.asBool, true);
+\end{urbiscript}
+
 \item \lstinline|asin|\\
   Arcsine of the target.
 \begin{urbiscript}[firstnumber=last]
