doc: prefer assert ( == ) in the output, assert_eq in the tests..
	* doc/tex2chk: Convert assert ( == ) to assert_eq.

	* doc/faq.tex, doc/specs/boolean.tex, doc/specs/dictionary.tex,
	* doc/specs/float.tex, doc/specs/lang.tex, doc/specs/list.tex,
	* doc/specs/object.tex, doc/specs/stdlib.tex, doc/specs/string.tex,
	* doc/tutorial/tutorial.tex, doc/urbi-sdk.tex: Adjust.
	And fixes.

	* share/urbi/dictionary.u ([]=): Return the assigned value, not
	the dictionary.
	* tests: Adjust.

	* doc/Makefile.am (CHECK_CLEANFILES): Clean all the *.chk.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -83,6 +83,7 @@ Changes:
 - empty strings, dictionaries and lists are now evaluated as "false"
   in conditions.
 - Dictionaries.asString does not sort the keys.
+- Dictionaries.[]= returns the assigned value, not the dictionary.
 - Constants is merged into Math.
 
 
