--- a/doc/specs/boolean.tex
+++ b/doc/specs/boolean.tex
@@ -1,8 +1,8 @@
 \section{Boolean}
 
 There is no object \lstinline|Boolean| in \us, but two specific
-objects \lstinline|true| and \lstinline|false|.  They are the result
-of all comparison statement.
+objects \lstindex{true} and \lstindex{false}.  They are the result of
+all comparison statement.
 
 
 \subsection{Prototypes}
@@ -37,33 +37,33 @@ assert(6 < 2 === false);
   \lstinline|this| is \lstinline|false|, return itself without
   evaluating \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(true && 2, 2);
-assert_eq(false && 1 / 0, false);
+assert((true && 2) == 2);
+assert((false && 1 / 0) == false);
 \end{urbiscript}
 
-\item \lstinline|'||'(\var{that})|\\
+\item \lstinline+'||'(\var{that})+\\
   Short-circuiting logical or. If \lstinline|this| is
   \lstinline|false| evaluate and return \var{that}.  If
   \lstinline|this| is \lstinline|true|, return itself without
   evaluating \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(true || 1/0, true);
-assert_eq(false || 2, 2);
+assert((true || 1/0) == true);
+assert((false || 2)  == 2);
 \end{urbiscript}
 
 \item \lstinline|'!'|\\
   Logical negation. If \lstinline|this| is \lstinline|false| return
   \lstinline|true| and vice-versa.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(!true, false);
-assert_eq(!false, true);
+assert(!true == false);
+assert(!false == true);
 \end{urbiscript}
 
 \item \lstinline|asBool|\\
   Identity.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(true.asBool,  true);
-assert_eq(false.asBool, false);
+assert(true.asBool ==  true);
+assert(false.asBool == false);
 \end{urbiscript}
 \end{itemize}
 
