--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -26,63 +26,63 @@ Float.new;
 \item \lstinline|abs|\\
   Absolute value of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq((-5).abs, 5);
-assert_eq(  0 .abs, 0);
-assert_eq(  5 .abs, 5);
+assert((-5).abs == 5);
+assert(  0 .abs == 0);
+assert(  5 .abs == 5);
 \end{urbiscript}
 
 \item \lstinline|acos|\\
   Arccosine of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.acos, pi/2);
-assert_eq(1.acos, 0);
+assert(0.acos == pi/2);
+assert(1.acos == 0);
 \end{urbiscript}
 
 \item \lstinline|asFloat|\\
   Return the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(51.asFloat, 51);
+assert(51.asFloat == 51);
 \end{urbiscript}
 
 \item \lstinline|asBool|\\
   Whether non null.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.asBool, false);
-assert_eq(0.1.asBool, true);
-assert_eq((-0.1).asBool, true);
-assert_eq(inf.asBool, true);
-assert_eq(nan.asBool, true);
+assert(0.asBool == false);
+assert(0.1.asBool == true);
+assert((-0.1).asBool == true);
+assert(inf.asBool == true);
+assert(nan.asBool == true);
 \end{urbiscript}
 
 \item \lstinline|asin|\\
   Arcsine of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.asin, 0);
+assert(0.asin == 0);
 \end{urbiscript}
 
 \item \lstinline|asString|\\
   Return a string representing the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(42.asString, "42");
+assert(42.asString == "42");
 \end{urbiscript}
 
 \item \lstinline|atan|\\
   Return the arctangent of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.atan, 0);
-assert_eq(1.atan, pi/4);
+assert(0.atan == 0);
+assert(1.atan == pi/4);
 \end{urbiscript}
 
 \item \lstinline|'bitand'(\var{that})|\\
   The bitwise-and between \lstinline|this| and \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(3 bitand 6, 2);
+assert(3 bitand 6 == 2);
 \end{urbiscript}
 
 \item \lstinline|'bitor'(\var{that})|\\
   Bitwise-or between \lstinline|this| and \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(3 bitor 6, 7);
+assert(3 bitor 6 == 7);
 \end{urbiscript}
 
 \item \lstinline|clone|\\
@@ -99,15 +99,15 @@ x === y;
 \item \lstinline|compl|\\
   The complement to 1 of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(compl 0, 4294967295);
-assert_eq(compl 4294967295, 0);
+assert(compl 0 == 4294967295);
+assert(compl 4294967295 == 0);
 \end{urbiscript}
 
 \item \lstinline|cos|\\
   Cosine of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.cos, 1);
-assert_eq(pi.cos, -1);
+assert(0.cos == 1);
+assert(pi.cos == -1);
 \end{urbiscript}
 
 \item \lstinline|each(\var{fun})|\\
@@ -137,9 +137,9 @@ Float.inf;
 \item \lstinline|log|\\
   The logarithm of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.log, -inf);
-assert_eq(1.log, 0);
-assert_eq(1.exp.log, 1);
+assert(0.log == -inf);
+assert(1.log == 0);
+assert(1.exp.log == 1);
 \end{urbiscript}
 
 \item \lstinline|nan|\\
@@ -162,47 +162,47 @@ for (3)
 \item \lstinline|round|\\
   The target, rounded.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(1.6.round, 2);
-assert_eq(1.4.round, 1);
+assert(1.6.round == 2);
+assert(1.4.round == 1);
 \end{urbiscript}
 
 \item \lstinline|seq|\\
   The sequence of integers from 0 to \lstinline|this| - 1 as a list.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(3.seq, [0, 1, 2]);
+assert(3.seq == [0, 1, 2]);
 \end{urbiscript}
 
 \item \lstinline|sgn|\\
   Return 1 if \lstinline|this| is positive, 0 if it is null, -1
   otherwise.
 \begin{urbiscript}[firstnumber=last]
-assert_eq((-1164).sgn, -1);
-assert_eq(0.sgn      , 0);
-assert_eq((1164).sgn , 1);
+assert((-1164).sgn == -1);
+assert(0.sgn       == 0);
+assert((1164).sgn  == 1);
 \end{urbiscript}
 
 \item \lstinline|sin|\\
   The sine of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.sin, 0);
+assert(0.sin == 0);
 \end{urbiscript}
 
 \item \lstinline|sqr|\\
   Square of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(32.sqr, 1024);
+assert(32.sqr == 1024);
 \end{urbiscript}
 
 \item \lstinline|sqrt|\\
   The square root of the target.
 \begin{urbiscript}[firstnumber=last]
-assert (1024.sqrt == 32);
+assert(1024.sqrt == 32);
 \end{urbiscript}
 
 \item \lstinline|tan|\\
   Tangent of the target.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(0.tan, 0);
+assert(0.tan == 0);
 (pi/4).tan;
 [00000000] 1
 \end{urbiscript}
@@ -220,20 +220,20 @@ assert_eq(0.tan, 0);
 \item \lstinline|trunc|\\
   Return the target truncated.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(1.9.trunc, 1);
-assert_eq((-1.9).trunc, -1);
+assert(1.9.trunc == 1);
+assert((-1.9).trunc == -1);
 \end{urbiscript}
 
 \item \lstinline|'^'(\var{that})|\\
   Bitwise exclusive or between \lstinline|this| and \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(3 ^ 6, 5);
+assert(3 ^ 6 == 5);
 \end{urbiscript}
 
 \item \lstinline|'>>'(\var{that})|\\%>>
   \lstinline|this| shifted by \var{that} bits towards the right.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(4 >> 2, 1);
+assert(4 >> 2 == 1);
 \end{urbiscript}
 
 \item \lstinline|'<'(\var{that})|\\
@@ -248,44 +248,44 @@ assert(!(1 < 0));
 \item \lstinline|'<<'(\var{that})|\\
   \lstinline|this| shifted by \var{that} bit towards the left.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(4 << 2, 16);
+assert(4 << 2 == 16);
 \end{urbiscript}
 
 \item \lstinline|'-'(\var{that})|\\
   \lstinline|this| subtracted by \var{b}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(6 - 3, 3);
+assert(6 - 3 == 3);
 \end{urbiscript}
 
 \item \lstinline|'+'(\var{that})|\\
   The sum of \lstinline|this| and \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(1 + 1, 2);
+assert(1 + 1 == 2);
 \end{urbiscript}
 
 \item \lstinline|'/'(\var{that})|\\
   The quotient of \lstinline|this| divided by \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(50 / 10, 5);
-assert_eq(10 / 50, 0.2);
+assert(50 / 10 == 5);
+assert(10 / 50 == 0.2);
 \end{urbiscript}
 
 \item \lstinline|'%'(\var{that})|\\
   \lstinline|this| modulo \var{b}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(50 % 11, 6);
+assert(50 % 11 == 6);
 \end{urbiscript}
 
 \item \lstinline|'*'(\var{that})|\\
   Product of \lstinline|this| by \var{that}.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(2 * 3, 6);
+assert(2 * 3 == 6);
 \end{urbiscript}
 
 \item \lstinline|'**'(\var{that})|\\
   \lstinline|this| to the \var{that} power (${this}^{that}$).
 \begin{urbiscript}[firstnumber=last]
-assert_eq(2 ** 10, 1024);
+assert(2 ** 10 == 1024);
 \end{urbiscript}
 
 \item \lstinline|'=='(\var{that})|\\
