--- a/doc/specs/string.tex
+++ b/doc/specs/string.tex
@@ -40,7 +40,7 @@ String;
   \lstinline|this|.  This allows to use \lstinline|for| to iterate
   over the string.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("123".asList, ["1", "2", "3"]);
+assert("123".asList == ["1", "2", "3"]);
 for (var v : "123")
   echo(v);
 [00000001] *** 1
@@ -51,14 +51,14 @@ for (var v : "123")
 \item \lstinline|asPrintable|\\
   Return \lstinline|this| as a literal (escaped) string.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foo".asPrintable, "\"foo\"");
-assert_eq("foo".asPrintable.asPrintable, "\"\\\"foo\\\"\"");
+assert("foo".asPrintable == "\"foo\"");
+assert("foo".asPrintable.asPrintable == "\"\\\"foo\\\"\"");
 \end{urbiscript}
 
 \item \lstinline|asString|\\
   Return \lstinline|this|.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("\"foo\"".asString, "\"foo\"");
+assert("\"foo\"".asString == "\"foo\"");
 \end{urbiscript}
 
 \item \lstinline|distance(\var{other})|\\
@@ -68,9 +68,9 @@ assert_eq("\"foo\"".asString, "\"foo\"");
   \var{other}.  The more alike the strings are, the smaller the
   distance is.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foo".distance("foo"), 0);
-assert_eq("bar".distance("baz"), 1);
-assert_eq("foo".distance("bar"), 3);
+assert("foo".distance("foo") == 0);
+assert("bar".distance("baz") == 1);
+assert("foo".distance("bar") == 3);
 \end{urbiscript}
 
 \item \lstinline|fresh|\\
@@ -78,8 +78,8 @@ assert_eq("foo".distance("bar"), 3);
   by \lstinline|this|.  It can safely be used with
   \lstinline|Object.setSlot| and so forth.
 \begin{urbiscript}[firstnumber=last]
-assert_eq(String.fresh, "_5");
-assert_eq("foo".fresh, "foo_6");
+assert(String.fresh == "_5");
+assert("foo".fresh == "foo_6");
 \end{urbiscript}
 
 \item \lstinline|replace(\var{from}, \var{to})|\\
@@ -87,7 +87,7 @@ assert_eq("foo".fresh, "foo_6");
   \lstinline|this| by \var{to}, and return the result.
   \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("Hello, World!".replace("Hello", "Bonjour")
+assert("Hello == World!".replace("Hello", "Bonjour")
                       .replace("World!", "Monde !"),
        "Bonjour, Monde !");
 \end{urbiscript}
@@ -95,22 +95,22 @@ assert_eq("Hello, World!".replace("Hello", "Bonjour")
 \item \lstinline|size|\\
   Return the size of the string.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foo".size, 3);
-assert_eq("".size, 0);
+assert("foo".size == 3);
+assert("".size == 0);
 \end{urbiscript}
 
 \item \lstinline|toLower|\\
   Make lower case every upper case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("Hello, World!".toLower, "hello, world!");
+assert("Hello == World!".toLower, "hello, world!");
 \end{urbiscript}
 
 \item \lstinline|toUpper|\\
   Make upper case every lower case character in \lstinline|this| and
   return the result.  \lstinline|this| is not modified.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("Hello, World!".toUpper, "HELLO, WORLD!");
+assert("Hello == World!".toUpper, "HELLO, WORLD!");
 \end{urbiscript}
 
 \item \lstinline|'%'(\var{args})|\\
@@ -122,25 +122,25 @@ assert_eq("Hello, World!".toUpper, "HELLO, WORLD!");
 %  \href{http://www.boost.org/doc/libs/1_39_0/libs/format/doc/format.html,
 %    Boost.Format}.  For instance:
 \begin{urbiscript}[firstnumber=last]
-assert_eq("%s + %s = %s" % [1, 2, 3], "1 + 2 = 3");
+assert("%s + %s = %s" % [1 == 2, 3], "1 + 2 = 3");
 \end{urbiscript}
 
 \item \lstinline|'*'(\var{n})|\\
   Return the concatentation of \lstinline|this| \var{n} times.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foo" * 0, "");
-assert_eq("foo" * 1, "foo");
-assert_eq("foo" * 3, "foofoofoo");
+assert("foo" * 0 == "");
+assert("foo" * 1 == "foo");
+assert("foo" * 3 == "foofoofoo");
 \end{urbiscript}
 
 \item \lstinline|'+'(\var{other})|\\
   Return the concatenation of \lstinline|this| and
   \lstinline|\var{other}.asString|.
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foo" + "bar", "foobar");
-assert_eq("foo" + "", "foo");
-assert_eq("foo" + 3, "foo3");
-assert_eq("foo" + [1, 2, 3], "foo[1, 2, 3]");
+assert("foo" + "bar" == "foobar");
+assert("foo" + "" == "foo");
+assert("foo" + 3 == "foo3");
+assert("foo" + [1 == 2, 3], "foo[1, 2, 3]");
 \end{urbiscript}
 
 \item \lstinline|'<'(\var{other})|\\
@@ -158,8 +158,8 @@ assert(!("a" < "a"));
   Return the substring starting at \var{from}, up to and not including
   \var{to} (which defaults to \var{to} + 1).
 \begin{urbiscript}[firstnumber=last]
-assert_eq("foobar"[0, 3], "foo");
-assert_eq("foobar"[0], "f");
+assert("foobar"[0 == 3], "foo");
+assert("foobar"[0] == "f");
 \end{urbiscript}
 
 \item \lstinline|'[]='(\var{from}, \var{other})|\\
@@ -172,11 +172,11 @@ assert_eq("foobar"[0], "f");
   \lstinline|this|.
 \begin{urbiscript}[firstnumber=last]
 var s1 = "foobar" | var s2 = s1 |
-assert_eq(s1[0, 3] = "quux", "quux");
-assert_eq(s1, "quuxbar");
-assert_eq(s2, "quuxbar");
-assert_eq(s1[4, 7] = "", "");
-assert_eq(s2, "quux");
+assert(s1[0 == 3] = "quux", "quux");
+assert(s1 == "quuxbar");
+assert(s2 == "quuxbar");
+assert(s1[4 == 7] = "", "");
+assert(s2 == "quux");
 \end{urbiscript}
 \end{itemize}
 
