--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -5,6 +5,7 @@
   \makeindex
   \usepackage{urbi-report}
   \usepackage{indexing}
+  \newcommand{\lstindex}[1]{\index{#1@\lstinline{#1}}#1}
   \usepackage{revision}
 
 \newcommand{\docurl}{http://www.gostai.com/downloads/urbi-sdk-2.0/doc}
