every|: support break and continue.
	* share/urbi/control.u (every|sleep): New.
	* src/parser/ast-factory.cc (ast_every): Use a for loop to
	translate every|.
	* doc/RELEASE-NOTES.txt, doc/specs/lang.tex: Doc it.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -51,6 +51,7 @@ urbiScript functions
 
 New constructs:
 - every|
+- break and continue are supported in "every|" loops.
 
 New objects:
 - Finalizable
