--- a/doc/k1-to-k2.tex
+++ b/doc/k1-to-k2.tex
@@ -132,8 +132,14 @@ The same feature with a slightly different syntax is now provided by
 \subsection{group}
 Where support for groups was a built-in feature in \us 1, it is now
 provided by the standard library, see \refObject{Group}.  Instead of
-\lstinline|group myGroup {a, b, c}|, write
-\lstinline|var myGroup = Group.new(a,b,c)|.
+\begin{urbifixme}
+group myGroup {a, b, c}
+\end{urbifixme}
+\noindent
+write
+\begin{urbifixme}
+var myGroup = Group.new(a,b,c)
+\end{urbifixme}
 
 \subsection{loopn}
 The same feature and syntax is now provided by \lstinline|for|.  See
