--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -192,9 +192,9 @@ for ``one second and 1 millisecond'', is strictly equivalent to
     \hline
     millisecond & ms           & $n / 1000$         \\
     second      & s            & $n$                \\
-    minute      & m            & $n * 60$           \\
-    hour        & h            & $n * 60 * 60$      \\
-    day         & d            & $n * 60 * 60 * 24$ \\
+    minute      & mn           & $n \times 60$           \\
+    hour        & h            & $n \times 60 \times 60$      \\
+    day         & d            & $n \times 60 \times 60 \times 24$ \\
     \hline
   \end{tabular}
   \caption{Duration units}
